# falcon-instrument-hub

./: .envrc  .gitignore  1_build-windows.txt  404.html  CMakeLists.txt  CMakePresets.json  IMPLEMENTATION_SUMMARY.md  MEASURE_REFACTOR_PLAN.md  Makefile  PORT_REFACTOR.md  QUICKSTART.md  README.md  REFACTOR_STATUS.md  api-update.sh  config.schema.json  go.mod  index.html  instrument_hub_config.yaml  lp  mkdocs.yml  nohup.out  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  vcpkg.json
.github/workflows/: build.yml  ci.yaml  deploy-docs.yml
CONFIG_VALIDATION/: index.html
LUA_SCRIPT_AUTHORING/: index.html
api/commands/v1/: log.yaml  measurement_ready.yaml  process_data.yaml  process_request.yaml  status.yaml  update_daemon_property.yaml  upload_data.yaml
api/common/: process_id.yaml  timestamp.yaml
api/schemas/: command_schema.yaml
cmake/bootstrap/: bootstrap-vcpkg.cmake
config_templates/: wiremap.toml  wiremap.yaml
data-viewer/: index.html
docs/: CONFIG_VALIDATION.md  LUA_SCRIPT_AUTHORING.md  data-viewer.md  index.md  nats-protocol.md  server-interpreter.md
docs/docs/: nats-protocol.md  server-interpreter.md
internal/api/: instrument.py  interpreter.go  interpreter.py
internal/config/: config.go
internal/database/: database.go  database_test.go  specschema.sql
latest/LUA_SCRIPT_AUTHORING/: index.html
latest/data-viewer/: index.html
latest/nats-protocol/: index.html
latest/server-interpreter/: index.html
logParser/: go.mod
logParser/cmd/: main.go
logs_63521373781/: 0_build-windows.txt  1_build-linux.txt
logs_63521373781/build-linux/: 18_Post Run actions_checkout@v4.txt  19_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Set up Go.txt  4_Download Go modules.txt  5_Build instrument-hub-server.txt  6_Build dataviewer.txt  7_Verify binary.txt  8_Run Go unit tests.txt  system.txt
logs_63521373781/build-windows/: 18_Post Run actions_checkout@v4.txt  19_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  system.txt
nats-protocol/: index.html
runtime/: .golangci.yml  EXAMPLES.md  MEASUREMENT_COMMANDS.md  MIGRATION.md  README.md  config-example.json  config-schema.json  go.mod  go.sum
runtime/cmd/: main.go
runtime/cmd/dataviewer/: main.go
runtime/datacache/: measurements.db-shm  measurements.db-wal
runtime/internal/api/: api.go  helpers.go  timestamp-extensions.go
runtime/internal/client/: instrument_client.go
runtime/internal/compiler/: compiler.go  compiler_test.go
runtime/internal/config/: config.go  config_augmentor.go  config_test.go  load.go  load_cgo.go  loader.go  loader_new.go  loader_new_test.go  loader_test.go  types.go
runtime/internal/database/: collector.go
runtime/internal/handlers/: busy_handler.go  copy_script.sh  device_config_handler.go  device_config_handler_test.go  instrument_handler.go  instrument_handler_test.go  interpreter_handler.go  log_handler.go  log_handler_test.go  manager.go  measure_cgo_helpers.go  measure_command_handler.go  measure_command_handler_response.go  measure_command_handler_response_stub.go  measure_command_handler_test.go  measure_stub_helpers.go  measurement_ready_handler.go  measurement_ready_handler_test.go  perform_instrument_method_handler.go  port_request_handler.go  port_request_handler_test.go  procattr_unix.go  procattr_windows.go  status_handler.go  status_handler_test.go  test_helpers_test.go
runtime/internal/logging/: logger.go
runtime/internal/manageVenv/: venv.go  venv_test.go
runtime/internal/measurements/: ?_busy_timeout=10000&_journal_mode=WAL&_sync=NORMAL&_txlock=immediate  database.go  database_test.go  handler.go  hdf5.go  manager.go  manager_test.go  types.go
runtime/internal/networking/: handlers.go  nats.go
runtime/internal/ports/: api.go  connections.go  library.go  ports_test.go
runtime/internal/scriptbridge/: bridge.go  bridge_test.go  client.go  doc.go  falcon_core.go  generator.go  generator_test.go  nats_handler.go  nats_handler_test.go  types.go  types_test.go
runtime/internal/serverinterpreter/: README.md  averaged_sweep_manager.go  averaged_sweep_test.go  bridge.go  bridge_test.go  channels.go  client.go  data_collector.go  deprecated_generator.go  doc.go  e2e_averaged_sweep_test.go  falcon_core.go  falcon_core_stub.go  falcon_core_test.go  falcon_request_router.go  falcon_request_test.go  generate_demo_measurements_test.go  generate_dummy_dataset_test.go  generator.go  generator_test.go  hdf5_falcon_core.go  hdf5_impl.go  hdf5_stub.go  hdf5_writer.go  hub_config.go  hub_startup_test.go  instructions.go  interpreter_daemon.go  live_iss_test.go  measurement_orchestrator.go  nats_handler.go  nats_handler_test.go  (+15 more)
runtime/pkgconfig/: falcon-core-c-api.pc
runtime/scripts/: dc_get_set.lua  get_voltage.lua  measure_current.lua  ramp_voltage.lua  set_voltage.lua  sweep_1d.lua  sweep_2d.lua
runtime/testdata/: one_charge_sensor_quantum_dot_device.yaml
scripts/: launch_instrument_daemon.py  launch_interpreter.py
search/: search_index.json
server-interpreter/: index.html
src/instrument-server/: go.mod  go.sum
src/instrument_server/: __init__.py  config_validator.py  constants.py  go.mod  registry_controls.py
src/instrument_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/server_daemons/: api.py  constants.py  data_queue.py  dependancies.py  instructions.py  instrument_daemon.py  interpreter_daemon.py  typing.py
src/server_daemons.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test-outs/: device_config.yaml  wiremap.yaml
test-outs/datacache/: measurements.db  measurements.db-shm  measurements.db-wal
test-outs/scripts/: launch_interpreter.py
test_data/: 2-dot-1-chargesensor-wiremap.yml  test-config.yaml
tests/: test_daemon_simple.py  test_instrument_daemon_shutdown.py  test_interpreter_daemon.py  test_launch.py  test_launch_script_daemon.py  test_launch_script_interpreter.py  test_signal_handling.py
tests/integration/: conftest.py  server_api.py  test_2D_data.py  test_full_system.py  test_linear_data.py  test_random_data.py
(+178 files in other folders)
